# talkative

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.example.yaml
ops/: Dockerfile  docker-compose.yml  k8s.yaml
scripts/: run_local.ps1
src/talkative/: config.py  discord_runner.py  http_server.py  logging_setup.py  metrics.py  openai_client.py  run.py  safety.py  state.py
tests/: test_config.py  test_safety.py
